--- a/sass/_reset.scss
+++ b/sass/_reset.scss
@@ -19,6 +19,7 @@ article {
 
   @media only screen and (min-width: $break) {
     padding: 2em 10%;
+    margin-top: 40px;
   }
 }
 
